[project]
name = "air-india-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.44.53",
    "boto3>=1.42.63",
    "botocore>=1.42.63",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.7.5",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
]
